still no solution

--- a/index.html
+++ b/index.html
@@ -1,166 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
+		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
+		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
+		<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Travelin</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
-	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
-	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
-	<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<title>Travelin</title>
-</head>
-
-<body>
-	<!-- TOP LOKASI -->
-	<section aria-label="my-top-place" class="top-lokasi">
-		<div class="text-center">
-			<h5 class="warnatur-guide">Top Destinations</h5>
-			<h2>Explore <span class="Judultur-guide">Top Destinations</span> </h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-				incididunt ut labore.
-			</p>
-		</div>
-
-		<div class="kumpulangambar container">
-			<div class="row">
-				<div class="col col-md-7 d-flex">
-					<div class="row">
-						<div class="kotak col-md-12">
-							<img src="assets/img/destination2.jpg" alt="" srcset="" />
-							<div class="top-lokasi-txt">
-								<p>Italy</p>
-								<h6>Caspian Valley</h6>
-								<span>18 Tours</span>
-							</div>
-						</div>
-						<div class="kotak col-md-6">
-							<img src="assets/img/destination15.jpg" alt="" srcset="" />
-							<div class="top-lokasi-txt">
-								<p>Moscow</p>
-								<h6>Russia</h6>
-								<span>15 Tours</span>
-							</div>
-						</div>
-						<div class="kotak col-md-6">
-							<img src="assets/img/destination16.jpg" alt="" srcset="" />
-							<div class="top-lokasi-txt">
-								<p>Florida</p>
-								<h6>America</h6>
-								<span>32 Tours</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col col-md-5 d-flex">
-					<div class="kotak">
-						<img src="assets/img/destination1.jpg" alt="" srcset="" />
-						<div class="top-lokasi-txt">
-							<p>England</p>
-							<h6>London</h6>
-							<span>15 Tours</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- PAKET TUR -->
-	<section aria-label="my-package" class="paket-tur ">
-		<div class="container d-flex flex-column">
-			<div>
-				<h5 class="warnatur-guide">Top Pick</h5>
-				<h2>Best <span class="Judultur-guide">Tour Packages</span> </h2>
+	<body>
+		<!-- TOP LOKASI -->
+		<section aria-label="my-top-place" class="top-lokasi">
+			<div class="text-center">
+				<h5 class="warnatur-guide">Top Destinations</h5>
+				<h2>Explore <span class="Judultur-guide">Top Destinations</span></h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 					incididunt ut labore.
 				</p>
 			</div>
 
-			<div class="karoselgambar-paket">
-				<div class="px-3">
-					<div class="card">
-						<div class="img-hover">
-							<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
-						</div>
-						<div class="hari d-flex   align-items-center gap-2 rounded">
-							<i class="fa-solid fa-calendar-days"></i>
-							<h5>9 days Tour</h5>
-						</div>
-						<div class="card-body">
-							<h6 class="Judultur-guide">Greeee</h6>
-							<h3 class="card-title">Santorini,Oia</h3>
-							<div class="bintang d-flex align-items-center gap-2 my-3">
-								<div>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
+			<div class="kumpulangambar">
+				<div class="row">
+					<div class="col col-md-7 d-flex">
+						<div class="row">
+							<div class="kotak col-md-12">
+								<img src="assets/img/destination2.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Italy</p>
+									<h6>Caspian Valley</h6>
+									<span>18 Tours</span>
 								</div>
-								<p class="m-0">(38)</p>
 							</div>
-							<p class="card-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-							</p>
-
-							<div class="harga d-flex align-items-center gap-2">
-								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$180.00</h6>
-								<p class="m-0"> | per person</p>
+							<div class="kotak col-md-6">
+								<img src="assets/img/destination15.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Moscow</p>
+									<h6>Russia</h6>
+									<span>15 Tours</span>
+								</div>
+							</div>
+							<div class="kotak col-md-6">
+								<img src="assets/img/destination16.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Florida</p>
+									<h6>America</h6>
+									<span>32 Tours</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col col-md-5 d-flex">
+						<div class="kotak">
+							<img src="assets/img/destination1.jpg" alt="" srcset="" />
+							<div class="top-lokasi-txt">
+								<p>England</p>
+								<h6>London</h6>
+								<span>15 Tours</span>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
 
-				<div class="px-3">
-					<div class="card">
-						<div class="img-hover">
-							<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
-						</div>
-						<div class="hari d-flex  align-items-center gap-2 rounded">
-							<i class="fa-solid fa-calendar-days"></i>
-							<h5>9 days Tour</h5>
-						</div>
-						<div class="card-body">
-							<h6 class="Judultur-guide">maldives</h6>
-							<h3 class="card-title">Hurawalhi island</h3>
-							<div class="bintang d-flex align-items-center gap-2 my-3">
-								<div>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-								</div>
-								<p class="m-0">(18)</p>
+		<!-- PAKET TUR -->
+		<section aria-label="my-package" class="paket-tur">
+			<div class="container d-flex flex-column">
+				<div>
+					<h5 class="warnatur-guide">Top Pick</h5>
+					<h2>Best <span class="Judultur-guide">Tour Packages</span></h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+						incididunt ut labore.
+					</p>
+				</div>
+
+				<div class="karoselgambar-paket">
+					<div>
+						<div class="card underline-animate">
+							<div class="img-hover">
+								<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
 							</div>
-							<p class="card-text">
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-							</p>
+							<div class="hari d-flex align-items-center gap-2 rounded">
+								<i class="fa-solid fa-calendar-days"></i>
+								<h5>9 days Tour</h5>
+							</div>
+							<div class="card-body">
+								<h6 class="Judultur-guide">Greeee</h6>
+								<h3 class="card-title">Santorini,Oia</h3>
+								<div class="bintang d-flex align-items-center gap-2 my-3">
+									<div>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+									</div>
+									<p class="m-0">(38)</p>
+								</div>
+								<p class="card-text">
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+								</p>
 
-							<div class="harga d-flex align-items-center gap-2">
-								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$260.00</h6>
-								<p class="m-0"> | per person</p>
+								<div class="harga d-flex align-items-center gap-2">
+									<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$180.00</h6>
+									<p class="m-0">| per person</p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="px-3">
-					<div class="card">
-						<div class="img-hover">
-							<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
-						</div>
-						<div class="hari d-flex  align-items-center gap-2 rounded">
-							<i class="fa-solid fa-calendar-days"></i>
-							<h5>5 days Tour</h5>
-						</div>
-						<div class="card-body">
-							<h6 class="Judultur-guide">Greeee</h6>
-							<h3 class="card-title">Santorini,Oia</h5>
+					<div>
+						<div class="card underline-animate">
+							<div class="img-hover">
+								<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
+							</div>
+							<div class="hari d-flex align-items-center gap-2 rounded">
+								<i class="fa-solid fa-calendar-days"></i>
+								<h5>9 days Tour</h5>
+							</div>
+							<div class="card-body">
+								<h6 class="Judultur-guide">maldives</h6>
+								<h3 class="card-title">Hurawalhi island</h3>
 								<div class="bintang d-flex align-items-center gap-2 my-3">
 									<div>
 										<span class="fa-solid fa-star"></span>
@@ -177,96 +142,151 @@
 
 								<div class="harga d-flex align-items-center gap-2">
 									<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$260.00</h6>
-									<p class="m-0"> | per person</p>
+									<p class="m-0">| per person</p>
 								</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="px-3">
-					<div class="card">
-						<div class="img-hover">
-							<img src="assets/img/trending2.jpg" class="card-img-top" alt="...">
-						</div>
-						<div class="hari d-flex  align-items-center gap-2 rounded">
-							<i class="fa-solid fa-calendar-days"></i>
-							<h5>9 days Tour</h5>
-						</div>
-						<div class="card-body">
-							<h6 class="Judultur-guide">croatia</h6>
-							<h3 class="card-title">Piazza Castello</h3>
-							<div class="bintang d-flex align-items-center gap-2 my-3">
-								<div>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-									<span class="fa-solid fa-star"></span>
-								</div>
-								<p class="m-0">(12)</p>
-							</div>
-							<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-							</p>
-
-							<div class="harga d-flex align-items-center gap-2">
-								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$170.00</h6>
-								<p class="m-0"> | per person</p>
 							</div>
 						</div>
 					</div>
+
+					<div>
+						<div class="card underline-animate">
+							<div class="img-hover">
+								<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
+							</div>
+							<div class="hari d-flex align-items-center gap-2 rounded">
+								<i class="fa-solid fa-calendar-days"></i>
+								<h5>5 days Tour</h5>
+							</div>
+							<div class="card-body">
+								<h6 class="Judultur-guide">Greeee</h6>
+								<h3 class="card-title">Santorini,Oia</h3>
+								<div class="bintang d-flex align-items-center gap-2 my-3">
+									<div>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+									</div>
+									<p class="m-0">(18)</p>
+								</div>
+								<p class="card-text">
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+								</p>
+
+								<div class="harga d-flex align-items-center gap-2">
+									<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$260.00</h6>
+									<p class="m-0">| per person</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<div class="card underline-animate">
+							<div class="img-hover">
+								<img src="assets/img/trending2.jpg" class="card-img-top" alt="..." />
+							</div>
+							<div class="hari d-flex align-items-center gap-2 rounded">
+								<i class="fa-solid fa-calendar-days"></i>
+								<h5>9 days Tour</h5>
+							</div>
+							<div class="card-body">
+								<h6 class="Judultur-guide">croatia</h6>
+								<h3 class="card-title">Piazza Castello</h3>
+								<div class="bintang d-flex align-items-center gap-2 my-3">
+									<div>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+									</div>
+									<p class="m-0">(12)</p>
+								</div>
+								<p class="card-text">
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+								</p>
+
+								<div class="harga d-flex align-items-center gap-2">
+									<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$170.00</h6>
+									<p class="m-0">| per person</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
+				<div class="row">
+					<div class="col-md-2">
+						<div
+							class="judulkategori w-100 h-100 d-flex align-items-center justify-content-center text-center rounded">
+							<h3 class="w-75">Top Categories</h3>
+						</div>
+					</div>
+					<div class="karoselgambar-icon col-md-10">
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/004-camping-tent.png" alt="" />
+								<p>Camping</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/003-hiking.png" alt="" />
+								<p>Hiking</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/005-sunbed.png" alt="" />
+								<p>Beach Tours</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/006-surf.png" alt="" />
+								<p>Surfing</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/002-safari.png" alt="" />
+								<p>Safari</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/008-cycling.png" alt="" />
+								<p>Cycling</p>
+							</div>
+						</div>
+
+						<div>
+							<div class="kategoricon underline-animate">
+								<img src="assets/img/007-hiking-1.png" alt="" />
+								<p>Trekings</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+		</section>
 
-			<div class="row">
-				<div
-					class="judulkategori col-md-2 d-flex align-items-center justify-content-center text-center rounded">
-					<h3 class="w-75">top categoris</h3>
-				</div>
-				<div class="karoselgambar-icon col-md-10">
-					<div class="kategoricon">
-						<img src="assets/img/004-camping-tent.png" alt="">
-						<p>Camping</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/003-hiking.png" alt="">
-						<p>Hiking</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/005-sunbed.png" alt="">
-						<p>Beach Tours</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/006-surf.png" alt="">
-						<p>Surfing</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/002-safari.png" alt="">
-						<p>Safari</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/008-cycling.png" alt="">
-						<p>Cycling</p>
-					</div>
-					<div class="kategoricon">
-						<img src="assets/img/007-hiking-1.png" alt="">
-						<p>Trekings</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+		<!-- TOP HARGA -->
+		<section aria-label="my-deals" class="top-harga"></section>
 
-	<!-- TOP HARGA -->
-	<section aria-label="my-deals" class="top-harga"></section>
-
-	<!-- JS LINK -->
-	<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
-	<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
-	<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-	<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
-</body>
-
+		<!-- JS LINK -->
+		<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
+		<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
+		<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
+		<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+		<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
