responsive dan finishing section paket tur

--- a/index.html
+++ b/index.html
@@ -68,15 +68,23 @@
 		</section>
 
 		<!-- PAKET TUR -->
-		<section aria-label="my-package" class="paket-tur">
+		<section aria-label="my-package" class="paket-tur position-relative">
 			<div class="container d-flex flex-column">
-				<div>
-					<h5 class="warnatur-guide">Top Pick</h5>
-					<h2>Best <span class="Judultur-guide">Tour Packages</span></h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-						incididunt ut labore.
-					</p>
+				<div class="position-relative">
+					<div class="paket-tur-judul">
+						<h5 class="warnatur-guide">Top Pick</h5>
+						<h2>Best <span class="Judultur-guide">Tour Packages</span></h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+							incididunt ut labore.
+						</p>
+					</div>
+					<div class="karoselarrow position-absolute top-50">
+						<div class="slick-item"></div>
+						<div class="slick-item"></div>
+						<div class="slick-item"></div>
+						<div class="slick-item"></div>
+					</div>
 				</div>
 
 				<div class="karoselgambar-paket">
@@ -85,11 +93,11 @@
 							<div class="img-hover">
 								<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
 							</div>
-							<div class="hari d-flex align-items-center gap-2 rounded">
-								<i class="fa-solid fa-calendar-days"></i>
-								<h5>9 days Tour</h5>
-							</div>
 							<div class="card-body">
+								<div class="hari d-flex align-items-center gap-2 rounded">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>9 days Tour</h5>
+								</div>
 								<h6 class="Judultur-guide">Greeee</h6>
 								<h3 class="card-title">Santorini,Oia</h3>
 								<div class="bintang d-flex align-items-center gap-2 my-3">
@@ -119,11 +127,11 @@
 							<div class="img-hover">
 								<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
 							</div>
-							<div class="hari d-flex align-items-center gap-2 rounded">
-								<i class="fa-solid fa-calendar-days"></i>
-								<h5>9 days Tour</h5>
-							</div>
 							<div class="card-body">
+								<div class="hari d-flex align-items-center gap-2 rounded">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>9 days Tour</h5>
+								</div>
 								<h6 class="Judultur-guide">maldives</h6>
 								<h3 class="card-title">Hurawalhi island</h3>
 								<div class="bintang d-flex align-items-center gap-2 my-3">
@@ -153,11 +161,11 @@
 							<div class="img-hover">
 								<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
 							</div>
-							<div class="hari d-flex align-items-center gap-2 rounded">
-								<i class="fa-solid fa-calendar-days"></i>
-								<h5>5 days Tour</h5>
-							</div>
 							<div class="card-body">
+								<div class="hari d-flex align-items-center gap-2 rounded">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>5 days Tour</h5>
+								</div>
 								<h6 class="Judultur-guide">Greeee</h6>
 								<h3 class="card-title">Santorini,Oia</h3>
 								<div class="bintang d-flex align-items-center gap-2 my-3">
@@ -187,11 +195,11 @@
 							<div class="img-hover">
 								<img src="assets/img/trending2.jpg" class="card-img-top" alt="..." />
 							</div>
-							<div class="hari d-flex align-items-center gap-2 rounded">
-								<i class="fa-solid fa-calendar-days"></i>
-								<h5>9 days Tour</h5>
-							</div>
 							<div class="card-body">
+								<div class="hari d-flex align-items-center gap-2 rounded">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>9 days Tour</h5>
+								</div>
 								<h6 class="Judultur-guide">croatia</h6>
 								<h3 class="card-title">Piazza Castello</h3>
 								<div class="bintang d-flex align-items-center gap-2 my-3">
@@ -217,61 +225,61 @@
 					</div>
 				</div>
 
-				<div class="row">
-					<div class="col-md-2">
+				<div class="row row-gap-4">
+					<div class="col-lg-2">
 						<div
 							class="judulkategori w-100 h-100 d-flex align-items-center justify-content-center text-center rounded">
-							<h3 class="w-75">Top Categories</h3>
+							<h3 class="p-2">Top Categories</h3>
 						</div>
 					</div>
-					<div class="karoselgambar-icon col-md-10">
-						<div>
-							<div class="kategoricon underline-animate">
+					<div class="karoselgambar-icon col-lg-10">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/004-camping-tent.png" alt="" />
-								<p>Camping</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Camping</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/003-hiking.png" alt="" />
-								<p>Hiking</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Hiking</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/005-sunbed.png" alt="" />
-								<p>Beach Tours</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Beach Tours</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/006-surf.png" alt="" />
-								<p>Surfing</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Surfing</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/002-safari.png" alt="" />
-								<p>Safari</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Safari</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/008-cycling.png" alt="" />
-								<p>Cycling</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Cycling</h6>
 						</div>
 
-						<div>
-							<div class="kategoricon underline-animate">
+						<div class="kategoricon underline-animate">
+							<div class="d-flex justify-content-center">
 								<img src="assets/img/007-hiking-1.png" alt="" />
-								<p>Trekings</p>
 							</div>
+							<h6 class="fs-5 fw-bold">Trekings</h6>
 						</div>
 					</div>
 				</div>
