design ok, animation and positioning no(position the txt here is suck)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<!-- TOP LOKASI -->
-		<section aria-label="my-top-place" class="top-lokasi">
+		<section aria-label="my-top-place" class="top-lokasi container-md py-5">
 			<div class="text-center">
 				<h5 class="warnatur-guide">Top Destinations</h5>
 				<h2>Explore <span class="Judultur-guide">Top Destinations</span></h2>
@@ -25,40 +25,56 @@
 
 			<div class="kumpulangambar">
 				<div class="row">
-					<div class="col col-md-7 d-flex">
-						<div class="row">
-							<div class="kotak col-md-12">
-								<img src="assets/img/destination2.jpg" alt="" srcset="" />
-								<div class="top-lokasi-txt">
+					<div class="col-lg-7 py-2">
+						<div class="kotak kotak-top">
+							<img class="img-top" src="assets/img/destination2.jpg" alt="" srcset="" />
+							<div class="top-lokasi-txt lokasi-txt-dif m-4">
+								<div class="tempat-txt">
 									<p>Italy</p>
 									<h6>Caspian Valley</h6>
-									<span>18 Tours</span>
 								</div>
+								<span>18 Tours</span>
 							</div>
-							<div class="kotak col-md-6">
-								<img src="assets/img/destination15.jpg" alt="" srcset="" />
-								<div class="top-lokasi-txt">
-									<p>Moscow</p>
-									<h6>Russia</h6>
+						</div>
+						<div class="d-flex justify-content-between">
+							<div class="kotak kotak-bottom w-100">
+								<img
+									class="img-bottom"
+									src="assets/img/destination15.jpg"
+									alt=""
+									srcset="" />
+								<div class="top-lokasi-txt m-4">
+									<div class="tempat-txt">
+										<p>Moscow</p>
+										<h6>Russia</h6>
+									</div>
 									<span>15 Tours</span>
 								</div>
 							</div>
-							<div class="kotak col-md-6">
-								<img src="assets/img/destination16.jpg" alt="" srcset="" />
-								<div class="top-lokasi-txt">
-									<p>Florida</p>
-									<h6>America</h6>
+							<div class="kotak kotak-bottom w-100">
+								<img
+									class="img-bottom"
+									src="assets/img/destination16.jpg"
+									alt=""
+									srcset="" />
+								<div class="top-lokasi-txt m-4">
+									<div class="tempat-txt">
+										<p>Florida</p>
+										<h6>America</h6>
+									</div>
 									<span>32 Tours</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-5 d-flex">
+					<div class="col-lg-5 py-2">
 						<div class="kotak">
-							<img src="assets/img/destination1.jpg" alt="" srcset="" />
-							<div class="top-lokasi-txt">
-								<p>England</p>
-								<h6>London</h6>
+							<img class="img-side" src="assets/img/destination1.jpg" alt="" srcset="" />
+							<div class="top-lokasi-txt lokasi-txt-dif m-4">
+								<div class="tempat-txt">
+									<p>England</p>
+									<h6>London</h6>
+								</div>
 								<span>15 Tours</span>
 							</div>
 						</div>
@@ -68,13 +84,13 @@
 		</section>
 
 		<!-- PAKET TUR -->
-		<section aria-label="my-package" class="paket-tur position-relative">
-			<div class="container d-flex flex-column">
+		<section aria-label="my-package" class="paket-tur position-relative py-5">
+			<div class="container-md d-flex flex-column gap-5">
 				<div class="position-relative">
 					<div class="paket-tur-judul">
 						<h5 class="warnatur-guide">Top Pick</h5>
 						<h2>Best <span class="Judultur-guide">Tour Packages</span></h2>
-						<p>
+						<p style="max-width: 75%">
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 							incididunt ut labore.
 						</p>
@@ -234,50 +250,50 @@
 					</div>
 					<div class="karoselgambar-icon col-lg-10">
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/004-camping-tent.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/004-camping-tent.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Camping</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/003-hiking.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/003-hiking.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Hiking</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/005-sunbed.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/005-sunbed.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Beach Tours</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/006-surf.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/006-surf.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Surfing</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/002-safari.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/002-safari.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Safari</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/008-cycling.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/008-cycling.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Cycling</h6>
 						</div>
 
 						<div class="kategoricon underline-animate">
-							<div class="d-flex justify-content-center">
-								<img src="assets/img/007-hiking-1.png" alt="" />
+							<div class="d-flex img-icon justify-content-center">
+								<img class="" src="assets/img/007-hiking-1.png" alt="" />
 							</div>
 							<h6 class="fs-5 fw-bold">Trekings</h6>
 						</div>
