--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
 
 	<!-- TOP HARGA -->
 	<section aria-label="my-deals" class="top-harga"></section>
+	<div class="text-center">
+		<div>
+			<h5 class="warnatur-guide">Top Deals</h5>
+			<h1>The <span class="Judultur-guide">Last Minute Deals</span> </h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+		</div>
+	</div>
+
 
 	<!-- JS LINK -->
 	<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
