--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="paket-tur-judul">
 					<h5 class="warnatur-guide">Top Pick</h5>
 					<h2>Best <span class="Judultur-guide">Tour Packages</span></h2>
-					<p style="max-width: 75%">
+					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 						incididunt ut labore.
 					</p>
@@ -295,15 +295,120 @@
 		</div>
 	</section>
 	<!-- TOP HARGA -->
-	<section aria-label="my-deals" class="top-harga"></section>
-	<div class="text-center">
-		<div>
-			<h5 class="warnatur-guide">Top Deals</h5>
-			<h1>The <span class="Judultur-guide">Last Minute Deals</span> </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-		</div>
-	</div>
+	<section aria-label="my-deals" class="top-harga">
+		<div class="container flow">
+			<div class="text-center">
+				<h5 class="warnatur-guide">Top Deals</h5>
+				<h1>The <span class="Judultur-guide">Last Minute Deals</span> </h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+				</p>
+			</div>
+			<div class="d-flex gap-3 ">
+				<div>
+					<div class="card">
+						<div class="img-hover rounded">
+							<img src="assets/img/destination11.jpg" class="card-img-top ratio-kotak img-animate"
+								alt="..." />
+						</div>
+						<div class="card-body position-absolute bottom-0">
 
+							<h6 class=" kuning">Norway</h6>
+							<h3 class="card-title text-light">Norway Lake</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0 text-light">(16)</p>
+							</div>
+
+
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold kuning">$180.00</h6>
+								<p class="m-0 text-light">| per person</p>
+								<div class="d-flex align-items-center gap-2 text-light">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>6 days Tour</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="card">
+						<div class="img-hover rounded ">
+							<img src="assets/img/destination10.jpg" class="card-img-top ratio-kotak img-animate"
+								alt="..." />
+						</div>
+						<div class="card-body position-absolute bottom-0">
+
+							<h6 class="kuning">usa</h6>
+							<h3 class="card-title text-light">New York City</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0 text-light">(12)</p>
+							</div>
+
+
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold kuning">$140.00</h6>
+								<p class="m-0 text-light">| per person</p>
+								<div class="d-flex align-items-center gap-2 text-light">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>3 days Tour</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="card ">
+						<div class="img-hover rounded">
+							<img src="assets/img/destination13.jpg" class="card-img-top ratio-kotak img-animate"
+								alt="..." />
+						</div>
+						<div class="card-body position-absolute bottom-0">
+
+							<h6 class="kuning">maldives</h6>
+							<h3 class="card-title text-light">Male City</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0 text-light">(12)</p>
+							</div>
+
+
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold kuning">$140.00</h6>
+								<p class="m-0 text-light">| per person</p>
+								<div class="d-flex align-items-center gap-2 text-light">
+									<i class="fa-solid fa-calendar-days"></i>
+									<h5>3 days Tour</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-center">
+				<a href="" class="btn btn-primary">View All Deals</a>
+			</div>
+		</div>
+	</section>
 
 	<!-- JS LINK -->
 	<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
